--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.mvc.static-path-pattern=/images/**
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=6MB
 spring.servlet.multipart.max-request-size=6MB
+#hola ruuuuu
