Nueva estructura de archivos, conexion a S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,20 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.web.resources.add-mappings=false
-#queso
+
+#s3
+#aws.acceskeyId=AKIAYS2NUWCCRM2WLF74
+#aws.secretke=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
+aws.acceskeyId=AKIAYS2NUWCCU4STT7N2
+aws.secretke=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
+aws.region=us-east-2
+aws.namebucket=technetsac
+
+
+
+spring.cloud.aws.credentials.access-key=AKIAYS2NUWCCU4STT7N2
+spring.cloud.aws.credentials.secret-key=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
+spring.cloud.aws.region.static=us-east-2
+
+#AKIAYS2NUWCCRM2WLF74
+#6zTQCaTc8Jzutfd9WN595ReRwfnZ/vWJh2h4Kfg9
