--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,23 +2,18 @@ spring.application.name=backend
 
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/superfact4
-spring.datasource.username=spring
-spring.datasource.password=130602632
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:technet}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.web.resources.add-mappings=false
 
-#s3
-#aws.acceskeyId=AKIAYS2NUWCCRM2WLF74
-#aws.secretke=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
 aws.acceskeyId=AKIAYS2NUWCCU4STT7N2
 aws.secretke=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
 aws.region=us-east-2
 aws.namebucket=technetsac
-
-
 
 spring.cloud.aws.credentials.access-key=AKIAYS2NUWCCU4STT7N2
 spring.cloud.aws.credentials.secret-key=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
