--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,9 @@ spring.cloud.aws.credentials.access-key=AKIAYS2NUWCCU4STT7N2
 spring.cloud.aws.credentials.secret-key=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
 spring.cloud.aws.region.static=us-east-2
 
+payment.url=${PAYMENT_URL:https://api.micuentaweb.pe/api-payment/V4/Charge/CreatePayment}
+payment.username=${PAYMENT_USERNAME:80203493}
+payment.password=${PAYMENT_PASSWORD:testpassword_fSmRYqQlrOACYbCdNRhKs91Vx3FU1NbitfOnZgM11FmkQ}
+payment.hash=${PAYMENT_HASH:vUf9fQQ95cjofzbw3qxKMGZg2FSjnzbBR53IgVRp7zIbZ}
 #AKIAYS2NUWCCRM2WLF74
 #6zTQCaTc8Jzutfd9WN595ReRwfnZ/vWJh2h4Kfg9
