--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=backend
 
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:superfact4}
-spring.datasource.username=${DB_USERNAME:spring}
-spring.datasource.password=${DB_PASSWORD:130602632}
+spring.datasource.url=jdbc:mysql://${DB_HOST:50.31.177.34}:${DB_PORT:3306}/${DB_NAME:technet2390_web}
+spring.datasource.username=${DB_USERNAME:technet2390_adminweb}
+spring.datasource.password=${DB_PASSWORD:PQji2)T8Sh+C}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
